--- a/styles.css
+++ b/styles.css
@@ -132,6 +132,21 @@ table {
     align-items: flex-start;
 }
 
+.equipment-level-box {
+    padding: 0px;
+    background-color: black;
+    font-family: azurLane;
+    font-size: small;
+    color: white;
+    opacity: 0.6;
+    width: fit-content;
+    position: absolute;
+    display: flex;
+    align-items: flex-start;
+    top: 45px;
+
+}
+
 h4, h5, h6 {
     font-family: azurLane;
     color: white !important;
