--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,13 @@ table {
     transform: translateX(-50%);
 }
 
+.centered-horizontal-ship-icon {
+    margin: 0;
+    position: absolute !important;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
 .centered-vertical {
     margin: 0;
     position: relative !important;
@@ -238,7 +245,7 @@ h4, h5, h6 {
 
 .left-container {
     float: left;
-    height: 100%;
+    height: 777px;
     position: relative;
     overflow-x: hidden;
     overflow-y: auto;
