--- a/styles.css
+++ b/styles.css
@@ -175,8 +175,11 @@ h4, h5, h6 {
     padding-left: 5px;
 }
 
+.min-label {
+    min-height: 34px;
+}
+
 .ship-icon {
-    border-radius: 5px;
     border-style: solid;
     border-color: grey;
     border-width: 2px; 
@@ -222,7 +225,9 @@ h4, h5, h6 {
 }
 
 .main-container {
-    width: 1200px !important;
+    background-color: rgba(0, 0, 0, 0.3);
+    height: 99vh !important;
+    width: 1172px !important;
     margin: 10px auto 0;
     display: block;
 }
@@ -245,11 +250,11 @@ h4, h5, h6 {
 
 .left-container {
     float: left;
-    height: 777px;
+    height: 600px;
     position: relative;
     overflow-x: hidden;
     overflow-y: auto;
-    width: 600px;
+    width: 522px;
 }
 
 .right-container {
@@ -258,10 +263,16 @@ h4, h5, h6 {
     position: relative;
     overflow-x: hidden;
     overflow-y: auto;
-    width: 600px;
+    width: 650px;
     margin-left: auto;
 }
 
 hr {
     margin: 5px !important;
+}
+
+body {
+    background-image: url("./src/assets/academy_background.png");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
