--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,10 @@
     background-image: linear-gradient(120deg,#fbffca,#baffbf,#a7efff,#ffabff);
 }
 
+option.ultra_rare {
+    background-color: lightgreen !important;
+}
+
 table {
     background-color: rgba(207, 207, 207, 0.767);
     border-radius: 25px;
