--- a/styles.css
+++ b/styles.css
@@ -265,6 +265,7 @@ h1, h2, h3, h4, h5, h6 {
 .right-container {
     float: right;
     min-height: 825px !important;
+    height: 99vh !important;
     position: relative;
     overflow-x: hidden;
     overflow-y: auto;
@@ -276,6 +277,17 @@ h1, h2, h3, h4, h5, h6 {
     width: 100%;
     background-color: rgba(0, 0, 0, 0.3);
     border-bottom: 1px solid rgb(255, 255, 255);
+}
+
+.tab-container-close {
+    position: absolute;
+    padding: 0;
+    margin: 0;
+    width: 50px;
+    height: 50px;
+    left: 1190px;
+    background-image: linear-gradient(60deg, rgb(148, 75, 66), rgb(189, 101, 90));
+    user-select: none;
 }
 
 hr {
