--- a/styles.css
+++ b/styles.css
@@ -85,11 +85,13 @@ table {
 .box-inner {
     background-color: rgb(172, 176, 187);
     padding: 5px; 
+    user-select: none;
 }
 
 .box-sub-inner {
     background-color: rgb(135, 139, 148);
     min-height: 37px;
+    user-select: none;
 }
 
 .stat-icon-wrapper {
@@ -134,7 +136,6 @@ table {
     padding-right: 10px;
 }
 
-
 .equipment-box {
     width: max-content;
     border-style: solid;
@@ -178,6 +179,7 @@ h1, h2, h3, h4, h5, h6 {
     color: white !important;
     padding-top: 5px;
     padding-left: 5px;
+    user-select: none;
 }
 
 .min-label {
@@ -193,6 +195,7 @@ h1, h2, h3, h4, h5, h6 {
     padding: 0px;
     border-top-width: 8px;
     border-bottom-width: 8px;
+    user-select: none;
 }
 
 .ship-rarity-box {
@@ -363,7 +366,7 @@ body {
     position: relative;
     overflow-x: hidden;
     overflow-y: hidden;
-    width: 800px;
+    width: 772px;
 }
 
 .graph-settings-container {
@@ -371,13 +374,14 @@ body {
     position: relative;
     overflow-x: hidden;
     overflow-y: auto;
-    width: 372px;
-    height: 900px;
+    width: 400px;
+    height: 950px;
     margin-left: auto;    
 }
 
 g {
     color: white !important;
+    user-select: none;
 }
 
 g text {
@@ -385,47 +389,45 @@ g text {
     font-family: azurLane !important;
     font-size: 14px !important;
     fill: white !important;
+    user-select: none;
 }
 
 .graph-label {
     font-size: 18px !important;
+    user-select: none;
 }
 
 .stat-input.form-control {
     width: 50px !important;
 }
 
-.ship-color {
-    width: 40px;
-    height: 14px;
-    border-radius: 2px;
+.ship-settings {
+    width: 100%;
 }
 
-.swatch {
-    float: right;
-    margin-top: 6px;
-    margin-right: 5px;
-    width: 50px;
-    height: fit-content;
-    border: 1px solid white;
+.ship-settings-label {
+    user-select: none;
+    width: 100%;
+    font-size: 1.5rem;
+    font-family: azurLane;
+    padding-top: 5px;
+    padding-left: 5px;
+    margin-top: 0;
+    margin-bottom: 0.5rem;
+    font-weight: 500;
+    line-height: 1.2;
+    text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.35), 1px -1px 0 rgba(0, 0, 0, 0.35), -1px 1px 0 rgba(0, 0, 0, 0.35), 1px 1px 0 rgba(0, 0, 0, 0.35);
+}
+
+.ship-settings-content {
+    background-color: rgba(0, 0, 0, 0.3) !important;
     padding: 5px;
-    background: rgb(135, 139, 148);
-    border-radius: 0.375rem;
-    box-shadow: 0 0 0 1px rgba(0,0,0,.1);
-    display: flex;
-    cursor: pointer;
+    width: 100%;
+    user-select: none;
 }
 
-.popover-color {
-    position: absolute;
-    z-index: 2;
-    left: 50px;
-}
-
-.cover-color {
-    position: fixed;
-    top: 0px;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
+.color-input {
+    float: right;
+    margin-top: 10px;
+    margin-right: 5px;
 }
