Updated loader to react element

--- a/styles.css
+++ b/styles.css
@@ -278,7 +278,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .tab-container-label {
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.3) !important;
     border-bottom: 1px solid rgb(255, 255, 255);
 }
 
